[gd_scene load_steps=73 format=3 uid="uid://dxc1j4ngmh4bv"]

[ext_resource type="Script" uid="uid://dhipu3irm8jlu" path="res://scenes/entities/police1.gd" id="1_r70il"]
[ext_resource type="Script" uid="uid://hqch2pbynonq" path="res://scenes/entities/damage_handler.gd" id="2_1ocex"]
[ext_resource type="Texture2D" uid="uid://j32v75u5nbg1" path="res://Assets/Art/Entities/Obstacles/Copshoot.png" id="2_61hhn"]
[ext_resource type="Script" uid="uid://dqt4pxhkxjyj5" path="res://States/Damageable.gd" id="2_djr4w"]
[ext_resource type="Texture2D" uid="uid://c1e4snbfxhp1a" path="res://Assets/Art/Entities/Obstacles/cop/PoliceIdle-ezgif.com-gif-to-sprite-converter.png" id="2_kx2lw"]
[ext_resource type="PackedScene" uid="uid://byiw0v1iii6tf" path="res://scenes/ui/floating_number.tscn" id="3_h5uth"]
[ext_resource type="Texture2D" uid="uid://lgp7kn62l8gq" path="res://Assets/Art/Entities/Obstacles/cop/Policehurt.png" id="4_evdfw"]
[ext_resource type="Script" uid="uid://cc5wfpndle3dj" path="res://States/State Machine.gd" id="4_m1id7"]
[ext_resource type="Script" uid="uid://b75a5b3xh22xq" path="res://States/EnemyIdle.gd" id="5_8r38f"]
[ext_resource type="Script" uid="uid://dytau0q53r4kw" path="res://States/EnemyFollow.gd" id="6_rl6eh"]
[ext_resource type="Script" uid="uid://cyjh7jnefay0" path="res://States/EnemyAttack.gd" id="7_n4166"]
[ext_resource type="Script" uid="uid://cyu6s5yvm0jjl" path="res://States/EnemyWindUp.gd" id="8_b5kjb"]
[ext_resource type="Script" uid="uid://c8qswp7at4ejq" path="res://EnemyReload.gd" id="9_7xrbq"]
[ext_resource type="Script" uid="uid://djb7n0svjjyoq" path="res://scenes/entities/PoliceHitState.gd" id="12_dn33m"]
[ext_resource type="Script" uid="uid://tambvuj0h74a" path="res://States/PoliceDead.gd" id="13_fw056"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pj0wg"]
size = Vector2(6, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_307ir"]
atlas = ExtResource("2_61hhn")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv5ri"]
atlas = ExtResource("2_61hhn")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfudr"]
atlas = ExtResource("2_61hhn")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm74r"]
atlas = ExtResource("2_61hhn")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qw2u"]
atlas = ExtResource("2_61hhn")
region = Rect2(80, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjtf"]
atlas = ExtResource("2_61hhn")
region = Rect2(0, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h8gv"]
atlas = ExtResource("2_61hhn")
region = Rect2(20, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8ykc"]
atlas = ExtResource("2_61hhn")
region = Rect2(40, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_owsxr"]
atlas = ExtResource("2_61hhn")
region = Rect2(60, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bnu6"]
atlas = ExtResource("2_61hhn")
region = Rect2(80, 16, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgphf"]
atlas = ExtResource("2_61hhn")
region = Rect2(0, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrf3a"]
atlas = ExtResource("2_61hhn")
region = Rect2(20, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1le3y"]
atlas = ExtResource("2_61hhn")
region = Rect2(40, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1c76"]
atlas = ExtResource("2_61hhn")
region = Rect2(60, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_avfgn"]
atlas = ExtResource("2_61hhn")
region = Rect2(80, 32, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dpdh"]
atlas = ExtResource("2_61hhn")
region = Rect2(0, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqx8q"]
atlas = ExtResource("2_61hhn")
region = Rect2(20, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqena"]
atlas = ExtResource("2_61hhn")
region = Rect2(40, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lv4s"]
atlas = ExtResource("2_61hhn")
region = Rect2(60, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fnmsx"]
atlas = ExtResource("2_61hhn")
region = Rect2(80, 48, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hedd0"]
atlas = ExtResource("2_61hhn")
region = Rect2(0, 64, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgist"]
atlas = ExtResource("2_61hhn")
region = Rect2(20, 64, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6m3k"]
atlas = ExtResource("2_61hhn")
region = Rect2(40, 64, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5w5bj"]
atlas = ExtResource("2_61hhn")
region = Rect2(60, 64, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6dp1u"]
atlas = ExtResource("4_evdfw")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_alklr"]
atlas = ExtResource("4_evdfw")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx4bi"]
atlas = ExtResource("4_evdfw")
region = Rect2(40, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1yqy"]
atlas = ExtResource("4_evdfw")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hojl4"]
atlas = ExtResource("4_evdfw")
region = Rect2(80, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb6km"]
atlas = ExtResource("4_evdfw")
region = Rect2(0, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7b5u"]
atlas = ExtResource("4_evdfw")
region = Rect2(20, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgi0j"]
atlas = ExtResource("4_evdfw")
region = Rect2(60, 0, 20, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_00y7n"]
atlas = ExtResource("2_kx2lw")
region = Rect2(106, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_su4ru"]
atlas = ExtResource("2_kx2lw")
region = Rect2(234, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmcwk"]
atlas = ExtResource("2_kx2lw")
region = Rect2(362, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_c07iw"]
atlas = ExtResource("2_kx2lw")
region = Rect2(490, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_pusdp"]
atlas = ExtResource("2_kx2lw")
region = Rect2(618, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_chwgo"]
atlas = ExtResource("2_kx2lw")
region = Rect2(746, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_od564"]
atlas = ExtResource("2_kx2lw")
region = Rect2(874, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ynrj"]
atlas = ExtResource("2_kx2lw")
region = Rect2(1002, 0, 32, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_myh40"]
atlas = ExtResource("2_kx2lw")
region = Rect2(1130, 0, 32, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_j3iy2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_307ir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv5ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfudr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nm74r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qw2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjtf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h8gv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8ykc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owsxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bnu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgphf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrf3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1le3y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1c76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avfgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dpdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqx8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqena")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lv4s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fnmsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hedd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgist")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6m3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5w5bj")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6dp1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alklr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx4bi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1yqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hojl4")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb6km")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7b5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgi0j")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00y7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_su4ru")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmcwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c07iw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pusdp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chwgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_od564")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ynrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myh40")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_nt3wp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:centered")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ak8p2"]
resource_name = "attack"
length = 4.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3, 3.2, 3.4, 3.6, 3.8, 4, 4.2, 4.4, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:centered")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.4, 1.6, 1.7, 1.75, 1.85, 1.95, 2.05),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 7, 6, 5, 4, 3, 2, 0]
}

[sub_resource type="Animation" id="Animation_egyu5"]
resource_name = "attack2"
length = 1.65
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1, 1.05, 1.1, 1.15, 1.2, 1.25, 1.3, 1.35, 1.4, 1.45, 1.5, 1.55, 1.6, 1.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 16, 17, 18, 19, 20, 21, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_tqb37"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["dead"]
}

[sub_resource type="Animation" id="Animation_a4txb"]
resource_name = "effective"

[sub_resource type="Animation" id="Animation_oogi2"]
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit"]
}

[sub_resource type="Animation" id="Animation_vp3xl"]
resource_name = "idle"
length = 1.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["idle"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 3, 3, 1]
}

[sub_resource type="Animation" id="Animation_2qera"]
resource_name = "reloading"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [13, 12, 11, 10, 9, 7, 6, 5, 5, 6, 7, 6, 7, 6, 7, 6, 7, 6, 7, 6, 7, 8, 9, 10, 12]
}

[sub_resource type="Animation" id="Animation_jpa6o"]
resource_name = "resistant"

[sub_resource type="Animation" id="Animation_i8iko"]
resource_name = "shooting"
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19, 20, 21]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:centered")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_0ynak"]
resource_name = "wind_up"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:centered")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 14]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vlhed"]
_data = {
&"RESET": SubResource("Animation_nt3wp"),
&"attack": SubResource("Animation_ak8p2"),
&"attack2": SubResource("Animation_egyu5"),
&"dead": SubResource("Animation_tqb37"),
&"effective": SubResource("Animation_a4txb"),
&"hit": SubResource("Animation_oogi2"),
&"idle": SubResource("Animation_vp3xl"),
&"reloading": SubResource("Animation_2qera"),
&"resistant": SubResource("Animation_jpa6o"),
&"shooting": SubResource("Animation_i8iko"),
&"wind_up": SubResource("Animation_0ynak")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_axesu"]
radius = 52.0096

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ofesv"]

[node name="Police" type="CharacterBody2D" node_paths=PackedStringArray("hit_state") groups=["Police"]]
collision_layer = 40
collision_mask = 293
script = ExtResource("1_r70il")
hit_state = NodePath("StateMachine/HitState")

[node name="DamageHandler" type="Node2D" parent="." node_paths=PackedStringArray("animation_player")]
script = ExtResource("2_1ocex")
animation_player = NodePath("../AnimationPlayer")
floating_number = ExtResource("3_h5uth")

[node name="Damageable" type="Node2D" parent="." node_paths=PackedStringArray("collision")]
script = ExtResource("2_djr4w")
collision = NodePath("../CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_pj0wg")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j3iy2")
animation = &"idle"
offset = Vector2(-4, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vlhed")
}
autoplay = "wind_up"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 40
collision_mask = 257
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_axesu")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="StateMachine" type="Node2D" parent="." node_paths=PackedStringArray("initial_state", "character")]
script = ExtResource("4_m1id7")
initial_state = NodePath("Idle")
character = NodePath("..")

[node name="Idle" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_8r38f")
enemy = NodePath("../..")
move_speed = 20.0

[node name="Follow" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("6_rl6eh")
enemy = NodePath("../..")
move_speed = 65.0

[node name="EnemyWindup" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("8_b5kjb")
enemy = NodePath("../..")
move_speed = 40.0

[node name="Attack" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("7_n4166")
enemy = NodePath("../..")
attack_range = 60.0

[node name="Reload" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("9_7xrbq")
enemy = NodePath("../..")

[node name="HitState" type="Node2D" parent="StateMachine" node_paths=PackedStringArray("damageable", "dead_state", "return_state")]
script = ExtResource("12_dn33m")
damageable = NodePath("../../Damageable")
dead_state = NodePath("../Dead")
dead_animation = "dead"
hit_animation = "hit"
return_state = NodePath("../Idle")

[node name="Timer" type="Timer" parent="StateMachine/HitState"]
wait_time = 0.25

[node name="Dead" type="Node2D" parent="StateMachine"]
script = ExtResource("13_fw056")
can_move = false

[node name="Reloading" type="Timer" parent="."]
wait_time = 2.5

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ofesv")
anim_player = NodePath("../AnimationPlayer")

[node name="Label" type="Label" parent="."]
visible = false
modulate = Color(1, 1, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = 10.0
offset_right = 36.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(36, 11.5)
text = "Resistant"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="animation_finished" from="AnimationPlayer" to="Damageable" method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="StateMachine/Idle" method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="Area2D" to="StateMachine/Attack" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="StateMachine/Idle" method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="StateMachine/Attack" method="_on_timer_timeout"]
[connection signal="out_of_ammo" from="StateMachine/Attack" to="StateMachine/Reload" method="_on_attack_out_of_ammo"]
[connection signal="timeout" from="StateMachine/HitState/Timer" to="StateMachine/HitState" method="_on_timer_timeout"]
[connection signal="timeout" from="Reloading" to="StateMachine/Reload" method="_on_reloading_timeout"]
